# solana-ip-protector

./: .env.simple  Anchor.toml  Cargo.toml  FLOWCHART.md  README.md  ai_analysis.py  backend.py  index.html  package-lock.json  package.json  solana_program.rs  vite.config.ts
src/: index.css
src/atoms/: Badge.tsx  Button.tsx  Card.tsx
src/molecules/: FileUpload.tsx  ScoreDisplay.tsx  SectionCard.tsx  SectionUpload.tsx  TransactionHistory.tsx  WalletConnection.tsx
src/organisms/: AnalysisResults.tsx  PaperAnalysis.tsx
src/pages/: HomePage.tsx
src/types/: index.ts
src/utils/: aiAnalysis.ts  nftService.ts  pdfProcessor.ts  solanaService.ts
