# Cargo.toml for Solana Program
[package]
name = "ip_protector"
version = "0.1.0"
description = "Solana program for intellectual property protection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ip_protector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[dev-dependencies]
solana-sdk = "1.16.0"
solana-program-test = "1.16.0"
tokio = { version = "1.0", features = ["full"] }